--- a/CSS.css
+++ b/CSS.css
@@ -1,11 +1,11 @@
-.navbar {
+/*.navbar {
   color: white;
   overflow: hidden;
   background-color: #333;
   height: 40px;
-}
+}*/
 
-.navbar a {
+/*.navbar a {
   float: left;
   display: block;
   color: #f2f2f2;
@@ -13,12 +13,12 @@
   padding: 14px 16px;
   text-decoration: none;
 
-}
+}*/
 
 body {
   height: 100%;
   font-family: helvetica, arial;
-  padding-top: 70px;
+  padding-top: 20px;
 }
 
 
@@ -55,16 +55,17 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-  text-shadow: 1px 1px 10px #000;
+  text-shadow: 1px 1px 9px #333;
   text-align: center;
-  color: #eee;
+  color: #ccc;
   overflow-x: auto;
-  padding-top: 40px;
-  font-size: .95rem;
+  padding-top: 80px;
+  font-size: 1.7rem;
   
   width: 100%;
   margin: 0;
 }
+
 
 #portfolio {
   background-image: url(https://static.pexels.com/photos/4827/nature-forest-trees-fog.jpeg);
@@ -76,7 +77,7 @@ body {
   color: #555;
   text-decoration: underline;
   overflow-x: auto;
-  padding-top: 35px;
+  padding-top: 80px;
   width: 100%;
   margin: 0;
 }
@@ -89,6 +90,7 @@ body {
   text-shadow: 1px 1px 0px #ddd;
   text-align: center;
   color: #333;
+  padding-top: 80px;
 }
 #contactContent {
   position: relative;
