--- a/CSS.css
+++ b/CSS.css
@@ -115,7 +115,7 @@ body {
   width: 100%;
 }
 
-a:link {
+/*a:link {
   color: white;
 }
 a:hover {
@@ -123,4 +123,5 @@ a:hover {
 }
 a:visited {
   color: #999999;
-}
+}*/
+
